--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -2,6 +2,13 @@
 
 {% block title %}Новая покупка | {{ block.super }}{% endblock %}
 
+{% block extrahead %}
+{{ block.super }}
+<link type="text/css" href="{{ STATIC_URL }}css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />	
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
+{% endblock %}
+
 {% block breadcrumbs %} - <a href="{% url price_index %}">Цены</a> - Новая покупка{% endblock %}
 
 {% block contentclass %}price-add{% endblock %}
@@ -12,6 +19,87 @@
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
+
+<script>
+$(document).ready(function(){
+    $( "#id_shop" ).autocomplete({
+        //Определяем обратный вызов к результатам форматирования
+		source: function(req, add){
+
+			//Передаём запрос на сервер
+			$.getJSON("{% url json_lookup 'shop' %}", req, function(data) {
+				//Создаем массив для объектов ответа
+				var suggestions = [];
+				//Обрабатываем ответ
+				$.each(data, function(i, val){
+					suggestions.push({label:val.fields.title,value:val.fields.title,id:val.pk});
+				});
+				//Передаем массив обратному вызову
+				add(suggestions);
+			});
+		},
+		//Определяем обработчик селектора
+		select: function(e, ui) {
+			//Создаем форматированную переменную shop
+			var shop = ui.item.id,
+				span = $("<span>").text(shop),
+				a = $("<a>").addClass("remove").attr({
+					href: "javascript:",
+					title: "Remove " + shop
+				}).text("x").appendTo(span);
+
+			//Добавляем после поля 
+			//span.insertAfter("#id_shop");
+		},
+
+		//Определяем обработчик выбора
+		change: function(event,ui){
+			//Сохраняем поле 'Кому' без изменений и в правильной позиции
+			//$("#id_shop").val("").css("top", 2);
+		},
+		minLength: 1,
+    });
+
+    $( "#id_product" ).autocomplete({
+        //Определяем обратный вызов к результатам форматирования
+		source: function(req, add){
+
+			//Передаём запрос на сервер
+			$.getJSON("{% url json_lookup 'product' %}", req, function(data) {
+				//Создаем массив для объектов ответа
+				var suggestions = [];
+				//Обрабатываем ответ
+				$.each(data, function(i, val){
+					suggestions.push({label:val.fields.title,value:val.fields.title,id:val.pk});
+				});
+				//Передаем массив обратному вызову
+				add(suggestions);
+			});
+		},
+		//Определяем обработчик селектора
+		select: function(e, ui) {
+			//Создаем форматированную переменную shop
+			var shop = ui.item.id,
+				span = $("<span>").text(shop),
+				a = $("<a>").addClass("remove").attr({
+					href: "javascript:",
+					title: "Remove " + shop
+				}).text("x").appendTo(span);
+
+			//Добавляем после поля
+			//span.insertAfter("#id_shop");
+		},
+
+		//Определяем обработчик выбора
+		change: function(event,ui){
+			//Сохраняем поле 'Кому' без изменений и в правильной позиции
+			//$("#id_shop").val("").css("top", 2);
+		},
+		minLength: 1,
+    });
+
+});
+</script>
 
 </div>
 {% endblock %}
