fix templates and styles

--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -2,7 +2,7 @@
 
 {% block title %}Цены{% endblock %}
 
-{% block breadcrumbs %} - Дневник{% endblock %}
+{% block breadcrumbs %} - Цены{% endblock %}
 
 {% block sidebar %}
 <!--<h2>Меню прайсов</h2>-->
