--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -38,7 +38,7 @@ th { text-align: left; }
                 <td>{{ forma.currency }} </td>
                 <td>{{ forma.spytrade }}</td>
              </tr>
-            <tr>
+            <tr class="form-errors-row">
                 <td>{{ forma.shop_visual.errors }}</td>
                 <td>{{ forma.time.errors }}</td>
                 <td>{{ forma.currency.errors }} </td>
