--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -2,6 +2,13 @@
 
 {% block title %}Цены{% endblock %}
 
+{% block extrahead %}
+{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/fprice.css" />
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
+{% endblock %}
+
+
 {% block breadcrumbs %} - Цены{% endblock %}
 
 {% block sidebar %}
