--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -70,7 +70,7 @@ th { text-align: left; }
     <input type="submit" value="Submit" />
 </form>
 
-<script>
+<script type="text/javascript">
 $(document).ready(function(){
     $("#tradeform tbody tr").formset({
         added: function(row) {
