--- a/templates/fprice/price_list.html
+++ b/templates/fprice/price_list.html
@@ -7,6 +7,11 @@
 
 {% block content %}
 <h1>Последние цены</h1>
+
+<div id="trade-add">
+<a href="{% url price_add %}">Добавьте вашу покупку прямо сейчас!</a>
+</div>
+<br />
 <div id="price-entries">
     <table>
     {% for item in object_list %}
