product detail and user list

--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -1,19 +1,15 @@
 {% extends "fprice/base_price.html" %}
 {% load comments markup %}
 
-{% block title %}Последние изменения цен | {{ block.super }}{% endblock %}
+{% block title %}Цены на {{ product.title }} | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Цены{% endblock %}
+{% block breadcrumbs %} - <a href="{% url price_index %}">Цены</a> - Продукт{% endblock %}
 
 {% block contentclass %}price{% endblock %}
 
 {% block content %}
-<h1>Последние цены</h1>
+<h1>Цены на {{ product.title }}</h1>
 
-<div id="trade-add">
-<a href="{% url price_trade_add %}">Добавьте вашу покупку прямо сейчас!</a>
-</div>
-<br />
 <div id="price-entries">
     <table>
     {% for item in object_list %}
