--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -23,11 +23,14 @@
     </li>
     {% endif %}
 
+    {% if request.user.is_authenticated %}
     <li id="price-profile"><h3>Личный кабинет</h3>
         <ul>
-        <li><a href="{% url price_add %}">Добавить покупку</a></li>
+        <li><a href="{% url price_trade_add %}">Добавить покупку</a></li>
+        <li><a href="{% url price_user_list %}">Ваши покупки</a></li>
         </ul>
     </li>
+    {% endif %}
 
 </ul><!-- /price-sidemenu -->
 {% endblock %}
