--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
 
 <div id="header">
 {% block header %}
-<div id="sitetitle">Интересный сайт</div>
+<div id="sitetitle">PriceSpeak</div>
 <div id="sitemenu">
-    <a href="/">О нас</a>
-    <a href="/blog/">Дневник</a>
     <a href="/price/">Цены</a>
+    <a href="/blog/">Дневник</a>
+    <a href="/">О нас</a>
 </div>
 {% endblock %}
 </div><!-- /#header -->
