--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -25,10 +25,10 @@ th { text-align: left; }
     <table id="titleform">
         <thead>
             <tr>
-                <th scope="col">{{ forma.shop_visual.label }}</th>
-                <th scope="col">{{ forma.time.label }}</th>
-                <th scope="col">{{ forma.currency.label }}</th>
-                <th scope="col">Spy</th>
+                <th scope="col">Магазин</th>
+                <th scope="col">Дата и время</th>
+                <th scope="col">Валюта</th>
+                <th scope="col">Шпион</th>
             </tr>
         </thead>
         <tbody>
@@ -50,9 +50,9 @@ th { text-align: left; }
     <table id="tradeform">
         <thead>
             <tr>
-                <th scope="col">Product</th>
-                <th scope="col">Price</th>
-                <th scope="col">Amount</th>
+                <th scope="col">Продукт</th>
+                <th scope="col">Цена</th>
+                <th scope="col">Объем покупки</th>
             </tr>
         </thead>
         <tbody>
