rename amount field

--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -52,7 +52,7 @@ th { text-align: left; }
             <tr>
                 <th scope="col">Продукт</th>
                 <th scope="col">Цена</th>
-                <th scope="col">Объем покупки</th>
+                <th scope="col">Количество</th>
             </tr>
         </thead>
         <tbody>
