--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
                 xaxis: {
                     minTickSize: [1, "day"],
                     mode: "time",
-                    timeformat: "%0d<id>%b<br>%y",
+                    timeformat: "%0d<br>%b<br>%y",
                     monthNames: ["Янв","Фев","Мар","Апр","Май","Июн","Июл","Авг","Сен","Окт","Ноя","Дек"]},
                 grid: { hoverable: true, clickable: true },
                 legend: { show: false },
