--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -23,7 +23,7 @@ $(document).ready(function() {
             label: '{{ shop.title }}',
             color: 0,
             data: [{% for item in object_list %}{% ifequal item.shop.id shop.id %}
-            ["{{ item.last_time_update|date:"Y/m/d G:i:s" }}",{{ item.price }}],
+            ["{{ item.last_time_update|date:"Y/m/d G:i:s" }}",{{ item.price|escapejs }}],
             {% endifequal %}{% endfor %}]
         },
         {% endfor %}
