--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Цены{% endblock %}
+{% block title %}Цены говорят{% endblock %}
 
 {% block extrahead %}
 {{ block.super }}
