add shops views

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
 <div id="siteslogan">Рост цен в прямом эфире</div>
 <div id="sitemenu">
     <ul>
-    <li><a href="/price/">Цены</a></li>
+    <li><a href="/products/">Цены</a></li>
+    <li><a href="/shops/">Магазины</a></li>
     <li><a href="/blog/">Дневник</a></li>
     <li><a href="/about/">О нас</a></li>
     </ul>
