--- a/templates/fprice/shop_list.html
+++ b/templates/fprice/shop_list.html
@@ -1,7 +1,7 @@
 {% extends "fprice/base_price.html" %}
 {% load comments markup %}
 
-{% block title %}Магазины | {{ block.super }}{% endblock %}
+{% block title %}Цены в магазинах | {{ block.super }}{% endblock %}
 
 {% block breadcrumbs %} - Магазины{% endblock %}
 
