--- a/templates/fprice/prodshop_detail.html
+++ b/templates/fprice/prodshop_detail.html
@@ -8,12 +8,12 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.flot.min.js"></script>
 {% endblock %}
 
-{% block breadcrumbs %} - <a href="{% url price_index %}">Цены</a> - <a href="{{ product.get_absolute_url }}">Продукт</a> - Магазин{% endblock %}
+{% block breadcrumbs %} - <a href="{% url price_index %}">Цены</a> - <a href="{{ product.get_absolute_url }}">Продукт</a> - В магазине{% endblock %}
 
 {% block contentclass %}price{% endblock %}
 
 {% block content %}
-<h1>Цены на {{ product.title }}</h1>
+<h1>Цены на <a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h1>
 <h2>в магазине <a href="{{ shop.get_absolute_url }}">{{ shop.title }}</a></h2>
 
 <script type="text/javascript">
