--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -130,7 +130,7 @@ $(document).ready(function() {
 <div id="price-entries" style="width:220px; margin-left:30px; float:right;">
     <table>
     {% for item in object_list %}
-        <tr><td style="text-align: right; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td></tr>
+        <tr><td style="text-align: right; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td><td><a href="{% url price_prodshop_detail item.product.id item.shop.id %}">маг</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#price-entries -->
