--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -27,7 +27,7 @@
     <li id="price-profile"><h3>Личный кабинет</h3>
         <ul>
         <li><a href="{% url price_trade_add %}">Добавить покупку</a></li>
-        <li><a href="{% url price_trade_list %}">Ваши покупки</a></li>
+        <li><a href="{% url price_trade_list %}">Мои покупки</a></li>
         </ul>
     </li>
     {% endif %}
