--- a/templates/fprice/trade_list.html
+++ b/templates/fprice/trade_list.html
@@ -9,10 +9,14 @@
 
 {% block content %}
 <h1>Мои покупки</h1>
+<div id="trade-add">
+<a href="{% url price_trade_add %}">Добавьте вашу покупку прямо сейчас!</a>
+</div>
+<br />
 <div id="trade-entries">
     <table>
     {% for item in object_list %}
-        <tr><td><i>{{ item.time|date:"j b H:i" }}</i></td><td><a href="{% url price_prodshop_detail item.product.id item.shop.id %}">маг</a></td><td style="text-align: right; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a href="{{ item.price.product.get_absolute_url }}">{{ item.price.product }}</a></td></tr>
+        <tr><td><i>{{ item.time|date:"j b H:i" }}</i></td><td><a href="{% url price_prodshop_detail item.price.product.id item.price.shop.id %}">маг</a></td><td style="text-align: right; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a href="{{ item.price.product.get_absolute_url }}">{{ item.price.product }}</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#trade-entries -->
