improve trade_add form

--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -25,7 +25,7 @@ th { text-align: left; }
     <table id="titleform">
         <thead>
             <tr>
-                <th scope="col">Магазин</th>
+                <th scope="col">Магазин (название, город, адрес)</th>
                 <th scope="col">Дата и время</th>
                 <th scope="col">Валюта</th>
                 <th scope="col">Шпион</th>
@@ -50,7 +50,7 @@ th { text-align: left; }
     <table id="tradeform">
         <thead>
             <tr>
-                <th scope="col">Продукт</th>
+                <th scope="col">Продукт (название, тип, параметры, производитель, упаковка)</th>
                 <th scope="col">Цена</th>
                 <th scope="col">Количество</th>
             </tr>
