--- a/templates/fprice/price_list.html
+++ b/templates/fprice/price_list.html
@@ -17,7 +17,7 @@
 <div id="price-entries">
     <table>
     {% for item in object_list %}
-        <tr><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td><td><a href="{% url price_prodshop_detail item.product.id item.shop.id %}">маг</a></td><td style="text-align: right; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><a href="{{ item.product.get_absolute_url }}">{{ item.product }}</a></td></tr>
+        <tr><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><a title="{{ item.shop.title }}" href="{% url price_prodshop_detail item.product.id item.shop.id %}">{{ item.product }}</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#price-entries -->
