improve trade_add template

--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -51,7 +51,7 @@ th { text-align: left; }
         <thead>
             <tr>
                 <th scope="col">Продукт (название, тип, параметры, производитель, упаковка)</th>
-                <th scope="col">Цена</th>
+                <th scope="col">Цена (за 1 ед.)</th>
                 <th scope="col">Количество</th>
             </tr>
         </thead>
@@ -67,7 +67,7 @@ th { text-align: left; }
     </table>
     {{ formset.management_form }}
     <br />
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Сохранить" />
 </form>
 
 <script type="text/javascript">
