--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+<link rel="shortcut icon" href="{{ STATIC_URL }}fprice/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="{{ STATIC_URL }}fprice/favicon.ico" type="image/x-icon" />
+
 <meta name="description" content="{% block description %}{% endblock %}"/>
 <meta name="keywords" content="{% block keywords %}{% endblock %}" />
 
