edit shop list h1

--- a/templates/fprice/shop_list.html
+++ b/templates/fprice/shop_list.html
@@ -8,7 +8,7 @@
 {% block contentclass %}shoplist{% endblock %}
 
 {% block content %}
-<h1>Магазины</h1>
+<h1>Цены в магазинах</h1>
 
 <div id="shop-list">
     <table>
