--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -24,6 +24,7 @@ $(document).ready(function() {
             color: 0,
             data: [{% for item in object_list %}{% ifequal item.shop.id shop.id %}
             ["{{ item.last_time_update|date:"Y/m/d G:i:s" }}",{{ item.price|escapejs }}],
+            ["{{ item.time|date:"Y/m/d G:i:s" }}",{{ item.price|escapejs }}],
             {% endifequal %}{% endfor %}]
         },
         {% endfor %}
