--- a/templates/fprice/prodshop_detail.html
+++ b/templates/fprice/prodshop_detail.html
@@ -132,10 +132,28 @@ $(document).ready(function() {
 
 </div>
 
+<script type="text/javascript">
+$(document).ready(function(){
+    $('.price_up').click(function(){
+        if (confirm("Подтвердить актуальность цены?"))
+            //$('<span class="process">...</span>').insertAfter($this);
+            $.get(
+                $(this).attr("href"),
+                {},
+                function(data){
+                    alert('ok');
+                }
+            );
+            // $('.process').hide();
+        return false;
+    });
+});
+</script>
+
 <div id="price-entries" style="width:220px; margin-left:30px; float:right;">
     <table>
     {% for item in object_list %}
-        <tr><td style="text-align: right; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td></tr>
+        <tr><td style="text-align: right; padding-right: 0px;"><b>{% if forloop.first %}<a class="price_up" href="{% url price_up item.id %}">+^</a> <big>{{ item.price }}</big>{% else %}{{ item.price }}{% endif %}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#price-entries -->
