more jquery .blur replace

--- a/templates/fprice/price_add.html
+++ b/templates/fprice/price_add.html
@@ -75,13 +75,15 @@ $(document).ready(function(){
     $("#tradeform tbody tr").formset({
         added: function(row) {
             row.find('td:first input').addClass("ac");
-            row.find('td input[name$="price_visual"]').addClass("ac_price");
+            row.find('td input[name$="price_visual"]').addClass("blur_replace");
+            row.find('td input[name$="amount"]').addClass("blur_replace");
             setAc();
         }
     });
 
     $("#tradeform tbody tr td:first input").addClass("ac");
-    $('#tradeform tbody tr input[name$="price_visual"]').addClass("ac_price");
+    $('#tradeform tbody tr input[name$="price_visual"]').addClass("blur_replace");
+    $('#tradeform tbody tr input[name$="amount"]').addClass("blur_replace");
 
     $("#id_shop_visual").autocomplete({
         //Определяем обратный вызов к результатам форматирования
@@ -161,7 +163,7 @@ $(document).ready(function(){
 		    },
 		    minLength: 1,
         });
-        $( ".ac_price" ).blur(function(){
+        $( ".blur_replace" ).blur(function(){
                 $(this).val($(this).val().replace(',','.'));
         });
     };
